# file-stream-wrapper

./: CMakeLists.txt  FileStreamWrapper.sln  FileStreamWrapper.vcxproj  FileStreamWrapper.vcxproj.filters  README.md  file-stream-wrapper.sln  file-stream-wrapper.vcxproj  file-stream-wrapper.vcxproj.filters
doc/: copy-past-helper.txt  to-do.txt
docs/: CopyPastHelper.txt  TODO.txt  copy-past-helper.txt  to-do.txt
include/: ErrorsHandlerFileOperations.h  FileConstants.h  FileOperations.h  FileService.h  GetFileLines.h  ReadBinaryFile.h  ReadBinaryFileThread.h  ReadDataFile.h  ReadDataFileThread.h  ReadFormattedDataTableCSV.h  ReadSerializedDataFile.h  ReadSerializedDataFileThread.h  ReadTextFile.h  ReadTextFileBig.h  ReadTextFileBigThread.h  ReadTextFileThread.h  Serialization.h  WriteBinaryFile.h  WriteBinaryFileThread.h  WriteDataFile.h  WriteDataFileThread.h  WriteDataTableCSV.h  WriteSerializedDataFile.h  WriteSerializedDataFileThread.h  WriteTextFile.h  WriteTextFileBig.h  WriteTextFileBigThread.h  WriteTextFileThread.h  bom.cxx  bom.hpp  data-table.cxx  data-table.hpp  divide-char-vec-to-lines.hpp  errors-handler-file-operations.cxx  errors-handler-file-operations.hpp  file-constants.cxx  file-constants.hpp  file-operations.hpp  file-service.cxx  file-service.hpp  (+34 more)
src/: BOM.cpp  DivideCharVecToLines.cpp  ErrorsHandlerFileOperations.cpp  FileConstants.cpp  FileOperations.cpp  FileService.cpp  FileStreamWrapperProject.cpp  ISerializable.cpp  ReadDataFile.cpp  ReadDataFileThread.cpp  ReadObjectInFile.cpp  ReadSerializedDataFile.cpp  ReadSerializedDataFileThread.cpp  ReadTextFile.cpp  ReadTextFileBig.cpp  ReadTextFileBigThread.cpp  ReadTextFileThread.cpp  Serialization.cpp  WriteDataFile.cpp  WriteDataFileThread.cpp  WriteSerializedDataFile.cpp  WriteSerializedDataFileThread.cpp  WriteTextFile.cpp  WriteTextFileBig.cpp  WriteTextFileBigThread.cpp  WriteTextFileThread.cpp  data-table.cpp  divide-char-vec-to-lines.cpp  errors-handler-file-operations.cpp  file-operations.cpp  file-stream-wrapper-project.cpp  read-serialized-data-file.cpp  write-serialized-data-file.cpp
tests/FileStreamTest/: FileStreamTest.cpp  FileStreamTest.vcxproj  FileStreamTest.vcxproj.filters  file-stream-test.cpp
